Solve Error :- Btn not showing on first click

--- a/content.css
+++ b/content.css
@@ -53,3 +53,9 @@
     text-align: center;
     font-size: 20px;
 }
+
+
+.new-content{
+    position: absolute;
+    width: max-content;
+}
